deploy: bba955ce91945ea0da1349f4411ed7b58b787c51

--- a/variété/index.html
+++ b/variété/index.html
@@ -9,22 +9,19 @@
   <meta name="description" content="Description">
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Variété de la pomme de terre"/>
-<meta name="twitter:description" content="Quelques variétés de la Kartoffel :
-Les variétés de pommes de terre les plus connues sont probablement celles de couleur jaune. Toutefois, ce sont les variétés rouges qui arrivent en premier en Europe par l’Espagne. Les variétés jaunes arrivent plus tard en Angleterre. Alors qu’en 1777 40 variétés ont été enregistrées, en 1881 il y en a déjà 630. Aujourd’hui, selon certaines estimations, il existe plusieurs milliers de variétés. En 2010, 1284 variétés sont officiellement enregistrées dans le catalogue communautaire européen."/>
+<meta name="twitter:description" content="Quelques variétés de la Kartoffel # Les variétés de pommes de terre les plus connues sont probablement celles de couleur jaune. Toutefois, ce sont les variétés rouges qui arrivent en premier en Europe par l’Espagne. Les variétés jaunes arrivent plus tard en Angleterre. Alors qu’en 1777 40 variétés ont été enregistrées, en 1881 il y en a déjà 630. Aujourd’hui, selon certaines estimations, il existe plusieurs milliers de variétés. En 2010, 1284 variétés sont officiellement enregistrées dans le catalogue communautaire européen."/>
 
 <meta property="og:title" content="Variété de la pomme de terre" />
-<meta property="og:description" content="Quelques variétés de la Kartoffel :
-Les variétés de pommes de terre les plus connues sont probablement celles de couleur jaune. Toutefois, ce sont les variétés rouges qui arrivent en premier en Europe par l’Espagne. Les variétés jaunes arrivent plus tard en Angleterre. Alors qu’en 1777 40 variétés ont été enregistrées, en 1881 il y en a déjà 630. Aujourd’hui, selon certaines estimations, il existe plusieurs milliers de variétés. En 2010, 1284 variétés sont officiellement enregistrées dans le catalogue communautaire européen." />
+<meta property="og:description" content="Quelques variétés de la Kartoffel # Les variétés de pommes de terre les plus connues sont probablement celles de couleur jaune. Toutefois, ce sont les variétés rouges qui arrivent en premier en Europe par l’Espagne. Les variétés jaunes arrivent plus tard en Angleterre. Alors qu’en 1777 40 variétés ont été enregistrées, en 1881 il y en a déjà 630. Aujourd’hui, selon certaines estimations, il existe plusieurs milliers de variétés. En 2010, 1284 variétés sont officiellement enregistrées dans le catalogue communautaire européen." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="/vari%C3%A9t%C3%A9/" /><meta property="article:section" content="posts" />
 
 
 
 <meta itemprop="name" content="Variété de la pomme de terre">
-<meta itemprop="description" content="Quelques variétés de la Kartoffel :
-Les variétés de pommes de terre les plus connues sont probablement celles de couleur jaune. Toutefois, ce sont les variétés rouges qui arrivent en premier en Europe par l’Espagne. Les variétés jaunes arrivent plus tard en Angleterre. Alors qu’en 1777 40 variétés ont été enregistrées, en 1881 il y en a déjà 630. Aujourd’hui, selon certaines estimations, il existe plusieurs milliers de variétés. En 2010, 1284 variétés sont officiellement enregistrées dans le catalogue communautaire européen.">
+<meta itemprop="description" content="Quelques variétés de la Kartoffel # Les variétés de pommes de terre les plus connues sont probablement celles de couleur jaune. Toutefois, ce sont les variétés rouges qui arrivent en premier en Europe par l’Espagne. Les variétés jaunes arrivent plus tard en Angleterre. Alors qu’en 1777 40 variétés ont été enregistrées, en 1881 il y en a déjà 630. Aujourd’hui, selon certaines estimations, il existe plusieurs milliers de variétés. En 2010, 1284 variétés sont officiellement enregistrées dans le catalogue communautaire européen.">
 
-<meta itemprop="wordCount" content="171">
+<meta itemprop="wordCount" content="165">
 <meta itemprop="keywords" content="" />
   <link rel="canonical" href="../vari%C3%A9t%C3%A9/">
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
@@ -46,7 +43,7 @@ Les variétés de pommes de terre les plus connues sont probablement celles de c
     "name": "Variété de la pomme de terre",
     "headline": "Variété de la pomme de terre",
     "alternativeHeadline": "",
-    "description": "Quelques variétés de la Kartoffel :\nLes variétés de pommes de terre les plus connues sont probablement celles de couleur jaune. Toutefois, ce sont les variétés rouges qui arrivent en premier en Europe par l’Espagne. Les variétés jaunes arrivent plus tard en Angleterre. Alors qu’en 1777 40 variétés ont été enregistrées, en 1881 il y en a déjà 630. Aujourd’hui, selon certaines estimations, il existe plusieurs milliers de variétés. En 2010, 1284 variétés sont officiellement enregistrées dans le catalogue communautaire européen.",
+    "description": "Quelques variétés de la Kartoffel # Les variétés de pommes de terre les plus connues sont probablement celles de couleur jaune. Toutefois, ce sont les variétés rouges qui arrivent en premier en Europe par l’Espagne. Les variétés jaunes arrivent plus tard en Angleterre. Alors qu’en 1777 40 variétés ont été enregistrées, en 1881 il y en a déjà 630. Aujourd’hui, selon certaines estimations, il existe plusieurs milliers de variétés. En 2010, 1284 variétés sont officiellement enregistrées dans le catalogue communautaire européen.",
     "inLanguage": "fr-fr",
     "isFamilyFriendly": "true",
     "mainEntityOfPage": {
@@ -83,7 +80,7 @@ Les variétés de pommes de terre les plus connues sont probablement celles de c
     },
     "image": "/images/logo.jpg",
     "url" : "\/vari%C3%A9t%C3%A9\/",
-    "wordCount" : "171",
+    "wordCount" : "165",
     "genre" : [ ],
     "keywords" : [ ]
 }
@@ -138,21 +135,22 @@ Les variétés de pommes de terre les plus connues sont probablement celles de c
 
       <div class="post-content e-content" itemprop="articleBody">
         
-      <p>Quelques variétés de la Kartoffel :</p>
-<p><img src="../media/Kartoffelauflauf.jpg" alt="Le gratin de pommes de terre" loading="lazy" />
+      <h2 id="quelques-variétés-de-la-kartoffel"><strong>Quelques variétés de la Kartoffel</strong> <a href="#quelques-vari%c3%a9t%c3%a9s-de-la-kartoffel" class="hash">#</a></h2>
+<p><img src="../media/Vari%c3%a9t%c3%a9.jpg" alt="La diversité de la pomme de terre" loading="lazy" />
 </p>
 <p>Les variétés de pommes de terre les plus connues sont probablement celles de couleur jaune. Toutefois, ce sont les variétés rouges qui arrivent en premier en Europe par l’Espagne. Les variétés jaunes arrivent plus tard en Angleterre. Alors qu’en 1777 40 variétés ont été enregistrées, en 1881 il y en a déjà 630. Aujourd’hui, selon certaines estimations, il existe plusieurs milliers de variétés. En 2010, 1284 variétés sont officiellement enregistrées dans le catalogue communautaire européen.</p>
-<p>La pomme de terre Jeannette
-<img src="../media/Kartoffelauflauf.jpg" alt="Le gratin de pommes de terre" loading="lazy" />
-
-Cette variété de pomme de terre a une peau rose, est polyvalente et convient à toutes les recettes de pommes de terre.</p>
-<p>La pomme de terre blanche
-<img src="../media/Kartoffelauflauf.jpg" alt="Le gratin de pommes de terre" loading="lazy" />
-
-Cette variété de pomme de terre a une peau jaune et est particulièrement populaire auprès des jardiniers amateurs, car elle est très facile à cultiver.</p>
-<p>La pomme de terre Bleu d’Artois!
-<a href="../media/Kartoffelauflauf.jpg">Le gratin de pommes de terre</a>
-Cette variété a une peau bleue intense, est également facile à cultiver et est particulièrement délicieuse lorsqu’elle est transformée en chips.</p>
+<p><strong>La pomme de terre Jeannette</strong></p>
+<p><img src="../media/Jeannette.jpg" alt="La pomme de terre Jeannette" loading="lazy" />
+</p>
+<p>Cette variété de pomme de terre a une peau rose, est polyvalente et convient à toutes les recettes de pommes de terre.</p>
+<p><strong>La pomme de terre blanche</strong></p>
+<p><img src="../media/Blanche.jpg" alt="La pomme de terre blanche" loading="lazy" />
+</p>
+<p>Cette variété de pomme de terre a une peau jaune et est particulièrement populaire auprès des jardiniers amateurs, car elle est très facile à cultiver.</p>
+<p><strong>La pomme de terre Bleu d’Artois</strong></p>
+<p><img src="../media/Bleue.jpg" alt="La pomme de terre Bleu d’Artois" loading="lazy" />
+</p>
+<p>Cette variété a une peau bleue intense, est également facile à cultiver et est particulièrement délicieuse lorsqu’elle est transformée en chips.</p>
 
       </div>
        
