deploy: 80915e6e78571be9ce838b4aa8906ab9cafc2808

--- a/variété/index.html
+++ b/variété/index.html
@@ -135,7 +135,7 @@
 
       <div class="post-content e-content" itemprop="articleBody">
         
-      <h2 id="quelques-variétés-de-la-kartoffel"><strong>Quelques variétés de la Kartoffel</strong> <a href="#quelques-vari%c3%a9t%c3%a9s-de-la-kartoffel" class="hash">#</a></h2>
+      <h2 id="quelques-variétés-de-la-kartoffel"><strong>Quelques variétés de la <em>Kartoffel</em></strong> <a href="#quelques-vari%c3%a9t%c3%a9s-de-la-kartoffel" class="hash">#</a></h2>
 <p><img src="../media/Vari%c3%a9t%c3%a9.jpg" alt="La diversité de la pomme de terre" loading="lazy" />
 </p>
 <p>Les variétés de pommes de terre les plus connues sont probablement celles de couleur jaune. Toutefois, ce sont les variétés rouges qui arrivent en premier en Europe par l’Espagne. Les variétés jaunes arrivent plus tard en Angleterre. Alors qu’en 1777 40 variétés ont été enregistrées, en 1881 il y en a déjà 630. Aujourd’hui, selon certaines estimations, il existe plusieurs milliers de variétés. En 2010, 1284 variétés sont officiellement enregistrées dans le catalogue communautaire européen.</p>
