deploy: 2d13156aff85eda7fd34791b9a8c47c9debafc10

--- a/print/index.html
+++ b/print/index.html
@@ -339,6 +339,7 @@ De surcroît, Kartoffelpüree avec des bâtonnets de poisson est un repas pour e
 <p><img src="../media/Bleue.jpg" alt="La pomme de terre Bleu d’Artois" loading="lazy" />
 </p>
 <p>Cette variété a une peau bleue intense, est également facile à cultiver et est particulièrement délicieuse lorsqu’elle est transformée en chips.</p>
+<p><a href="">go to Histoire</a></p>
 
     </div>
     </section>
