--- a/variété/index.html
+++ b/variété/index.html
@@ -151,7 +151,7 @@
 <p><img src="../media/Bleue.jpg" alt="La pomme de terre Bleu d’Artois" loading="lazy" />
 </p>
 <p>Cette variété a une peau bleue intense, est également facile à cultiver et est particulièrement délicieuse lorsqu’elle est transformée en chips.</p>
-<p><a href="">go to Histoire</a></p>
+<p><a href="https://xlilix2312.github.io/Kartoffel/histoire/">go to Histoire</a></p>
 
       </div>
        
