deploy: 60247070191ae7771b02e86e7ecc7f5df46e0c1d

--- a/print/index.html
+++ b/print/index.html
@@ -186,6 +186,7 @@
 <p>Ce n’est qu’au 18ème siècle que le pharmacien <a href="https://fr.wikipedia.org/wiki/Antoine_Parmentier">Antoine-Augustin Parmentier</a> dissout cette erreur. Il commence à cultiver la pomme de terre en France et souligne l’importance d’utiliser la pomme de terre pour lutter contre les famines.</p>
 <p><strong>Fait amusant  :</strong>  Parmentier prépare un dîner pour le roi et la reine, au cours duquel seulement des plats avec des pommes de terre sont servis. À mon avis, ce dîner ressemble à un dîner que j’apprécierais beaucoup.
 Désormais, la pomme de terre devient de plus en plus importante et ne cesse de se répandre dans toute l’Europe et dans d’autres régions jusqu’à ce qu’elle conquière finalement le monde entier à la fin du 20ème siècle.</p>
+<p><a href="https://xlilix2312.github.io/Kartoffel/Vari%C3%A9t%C3%A9">En savoir plus sur les variétés de pomme de terre</a></p>
 
     </div>
     </section>
@@ -339,7 +340,7 @@ De surcroît, Kartoffelpüree avec des bâtonnets de poisson est un repas pour e
 <p><img src="../media/Bleue.jpg" alt="La pomme de terre Bleu d’Artois" loading="lazy" />
 </p>
 <p>Cette variété a une peau bleue intense, est également facile à cultiver et est particulièrement délicieuse lorsqu’elle est transformée en chips.</p>
-<p><a href="https://xlilix2312.github.io/Kartoffel/histoire/">go to Histoire</a></p>
+<p><a href="https://xlilix2312.github.io/Kartoffel/histoire/">En savoir plus sur l&rsquo;histoire de la pomme de terre</a></p>
 
     </div>
     </section>
