--- a/variété/index.html
+++ b/variété/index.html
@@ -21,7 +21,7 @@
 <meta itemprop="name" content="Variété de la pomme de terre">
 <meta itemprop="description" content="Quelques variétés de la Kartoffel # Les variétés de pommes de terre les plus connues sont probablement celles de couleur jaune. Toutefois, ce sont les variétés rouges qui arrivent en premier en Europe par l’Espagne. Les variétés jaunes arrivent plus tard en Angleterre. Alors qu’en 1777 40 variétés ont été enregistrées, en 1881 il y en a déjà 630. Aujourd’hui, selon certaines estimations, il existe plusieurs milliers de variétés. En 2010, 1284 variétés sont officiellement enregistrées dans le catalogue communautaire européen.">
 
-<meta itemprop="wordCount" content="168">
+<meta itemprop="wordCount" content="175">
 <meta itemprop="keywords" content="" />
   <link rel="canonical" href="../vari%C3%A9t%C3%A9/">
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
@@ -80,7 +80,7 @@
     },
     "image": "/images/logo.jpg",
     "url" : "\/vari%C3%A9t%C3%A9\/",
-    "wordCount" : "168",
+    "wordCount" : "175",
     "genre" : [ ],
     "keywords" : [ ]
 }
@@ -151,7 +151,7 @@
 <p><img src="../media/Bleue.jpg" alt="La pomme de terre Bleu d’Artois" loading="lazy" />
 </p>
 <p>Cette variété a une peau bleue intense, est également facile à cultiver et est particulièrement délicieuse lorsqu’elle est transformée en chips.</p>
-<p><a href="https://xlilix2312.github.io/Kartoffel/histoire/">go to Histoire</a></p>
+<p><a href="https://xlilix2312.github.io/Kartoffel/histoire/">En savoir plus sur l&rsquo;histoire de la pomme de terre</a></p>
 
       </div>
        
