--- a/histoire/index.html
+++ b/histoire/index.html
@@ -21,7 +21,7 @@
 <meta itemprop="name" content="Histoire de la pomme de terre">
 <meta itemprop="description" content="L’histoire de la Kartoffel en un coup d’œil # La Kartoffel ou la pomme de terre provient à l’origine de la Cordillère des Andes. Là, elle poussait à l’état sauvage. Elle a été baptisée par les Incas avec le nom de « papa » et activement cultivé par eux à partir du 13ème siècle. Au 16ème siècle, elle a été introduite en Europe par les colonisateurs espagnols. En Espagne, elle a reçu le nom de « patata ».">
 
-<meta itemprop="wordCount" content="244">
+<meta itemprop="wordCount" content="254">
 <meta itemprop="keywords" content="" />
   <link rel="canonical" href="../histoire/">
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
@@ -80,7 +80,7 @@
     },
     "image": "/images/logo.jpg",
     "url" : "\/histoire\/",
-    "wordCount" : "244",
+    "wordCount" : "254",
     "genre" : [ ],
     "keywords" : [ ]
 }
@@ -143,6 +143,7 @@
 <p>Ce n’est qu’au 18ème siècle que le pharmacien <a href="https://fr.wikipedia.org/wiki/Antoine_Parmentier">Antoine-Augustin Parmentier</a> dissout cette erreur. Il commence à cultiver la pomme de terre en France et souligne l’importance d’utiliser la pomme de terre pour lutter contre les famines.</p>
 <p><strong>Fait amusant  :</strong>  Parmentier prépare un dîner pour le roi et la reine, au cours duquel seulement des plats avec des pommes de terre sont servis. À mon avis, ce dîner ressemble à un dîner que j’apprécierais beaucoup.
 Désormais, la pomme de terre devient de plus en plus importante et ne cesse de se répandre dans toute l’Europe et dans d’autres régions jusqu’à ce qu’elle conquière finalement le monde entier à la fin du 20ème siècle.</p>
+<p><a href="https://xlilix2312.github.io/Kartoffel/Vari%C3%A9t%C3%A9">En savoir plus sur les variétés de pomme de terre</a></p>
 
       </div>
        
