deploy: 8d66de80cad90fe98dc91c67516980d4e9b7c9b5

--- a/bratkartoffeln/index.html
+++ b/bratkartoffeln/index.html
@@ -27,7 +27,7 @@ Les ingrédients # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fu
 Portions 4 portions
 Les ingrédients # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sel Sel et poivre au goût La préparation # Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Coupez les pommes de terre en tranches fines.">
 
-<meta itemprop="wordCount" content="185">
+<meta itemprop="wordCount" content="190">
 <meta itemprop="keywords" content="" />
   <link rel="canonical" href="../bratkartoffeln/">
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
@@ -86,7 +86,7 @@ Les ingrédients # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fu
     },
     "image": "/images/logo.jpg",
     "url" : "\/bratkartoffeln\/",
-    "wordCount" : "185",
+    "wordCount" : "190",
     "genre" : [ ],
     "keywords" : [ ]
 }
@@ -166,6 +166,7 @@ Les ingrédients # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fu
 </ol>
 <h3 id="mon-conseil"><strong>Mon conseil</strong> <a href="#mon-conseil" class="hash">#</a></h3>
 <p>Bratkartoffeln sont un plat très populaire en Allemagne et elles sont souvent servies avec le Wiener Schnitzel typique. Cependant, ma façon préférée de les manger est avec un œuf au plat. La jaune d’œuf fond sur les Bratkartoffeln, ce qui crée une combinaison extrêmement savoureuse.</p>
+<p><a href="https://xlilix2312.github.io/Kartoffel/Kartoffelauflauf">Aller à la recette <em>Kartoffelauflauf</em></a></p>
 
       </div>
        
