--- a/kartoffelauflauf/index.html
+++ b/kartoffelauflauf/index.html
@@ -27,7 +27,7 @@ Les ingrédients # 1 kg de pomme de terre 100 g de gruyère râpé 85 g de beurr
 Portions 4 portions
 Les ingrédients # 1 kg de pomme de terre 100 g de gruyère râpé 85 g de beurre 250 ml de bouillon Sel et poivre au goût La préparation # Peler les pommes de terre et les couper en tranches extrêmement fines. Graisser un plat allant au four avec du beurre. Répartir toutes les tranches fines de pommes de terre dans le plat allant au four.">
 
-<meta itemprop="wordCount" content="202">
+<meta itemprop="wordCount" content="207">
 <meta itemprop="keywords" content="" />
   <link rel="canonical" href="../kartoffelauflauf/">
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
@@ -86,7 +86,7 @@ Les ingrédients # 1 kg de pomme de terre 100 g de gruyère râpé 85 g de beurr
     },
     "image": "/images/logo.jpg",
     "url" : "\/kartoffelauflauf\/",
-    "wordCount" : "202",
+    "wordCount" : "207",
     "genre" : [ ],
     "keywords" : [ ]
 }
@@ -164,6 +164,7 @@ Les ingrédients # 1 kg de pomme de terre 100 g de gruyère râpé 85 g de beurr
 </ol>
 <h3 id="mon-conseil"><strong>Mon conseil</strong> <a href="#mon-conseil" class="hash">#</a></h3>
 <p>En fait, le Kartoffelauflauf est une recette que je n’ai connue que récemment, mais qui a immédiatement conquis mon estomac et mon cœur. Lorsque j’ai préparé ce plat pour la première fois pour ma famille, chaque membre de la famille a tout de suite adoré cette recette. En effet, c’est le plat préféré de ma sœur depuis. À mon avis, ce plat se marie bien avec le poisson cuit au four.</p>
+<p><a href="https://xlilix2312.github.io/Kartoffel/Kartoffelpuffer">Aller à la recette <em>Kartoffelpuffer</em></a></p>
 
       </div>
        
