--- a/kartoffelpuffer/index.html
+++ b/kartoffelpuffer/index.html
@@ -27,7 +27,7 @@ Les ingrédients # 12 pommes de terre pelées et râpées, non cuites 2 oignons 
 Portions 4 portions
 Les ingrédients # 12 pommes de terre pelées et râpées, non cuites 2 oignons râpés 2 œufs 2 c. à soupe de farine Plusieurs c. à soupe d’huile Sel et poivre au goût La préparation # Bien égoutter les pommes de terre et les oignons sur un torchon de cuisine, du papier absorbant ou à l&rsquo;aide d&rsquo;une passoire, puis mélanger ensemble.">
 
-<meta itemprop="wordCount" content="258">
+<meta itemprop="wordCount" content="263">
 <meta itemprop="keywords" content="" />
   <link rel="canonical" href="../kartoffelpuffer/">
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
@@ -86,7 +86,7 @@ Les ingrédients # 12 pommes de terre pelées et râpées, non cuites 2 oignons 
     },
     "image": "/images/logo.jpg",
     "url" : "\/kartoffelpuffer\/",
-    "wordCount" : "258",
+    "wordCount" : "263",
     "genre" : [ ],
     "keywords" : [ ]
 }
@@ -164,6 +164,7 @@ Les ingrédients # 12 pommes de terre pelées et râpées, non cuites 2 oignons 
 </ol>
 <h3 id="mon-conseil"><strong>Mon conseil</strong> <a href="#mon-conseil" class="hash">#</a></h3>
 <p>Kartoffelpuffer sont servies des manières différentes dans différentes régions d’Allemagne, mais aussi dans différentes parties du monde. Personnellement, je les mange avec de la compote de pommes ce qui est délicieux. J’ai de très bons souvenirs d’enfance de manger des Kartoffelpuffer avec de la compote de pommes sur la plage dans le nord de l’Allemagne. Sinon, une autre option sucrée est de manger les Kartoffelpuffer avec de la confiture. Ici, la confiture de groseilles ou de prunes est particulièrement appropriée. En revanche, une amie de Pologne les mange toujours de manière salée. Elle préfère le fromage blanc, mais d’autres variantes populaires en Pologne sont la crème fraîche, le fromage cottage ou le gruyère. Choisissez ce que vous voulez  !</p>
+<p><a href="https://xlilix2312.github.io/Kartoffel/Kartoffelp%C3%BCree">Aller à la recette <em>Kartoffelpüree</em></a></p>
 
       </div>
        
