--- a/kartoffelpüree/index.html
+++ b/kartoffelpüree/index.html
@@ -27,7 +27,7 @@ Les ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c.
 Portions 4 portions
 Les ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c. à soupe de beurre Sel et poivre au goût La préparation # Les pommes de terre sont bouillies dans une casserole avec de l’eau salée. Elles sont cuites jusqu’à ce qu’elles deviennent molles. Environ 20 minutes. Après cela, vidangez l’eau.">
 
-<meta itemprop="wordCount" content="211">
+<meta itemprop="wordCount" content="216">
 <meta itemprop="keywords" content="" />
   <link rel="canonical" href="../kartoffelp%C3%BCree/">
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
@@ -86,7 +86,7 @@ Les ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c.
     },
     "image": "/images/logo.jpg",
     "url" : "\/kartoffelp%C3%BCree\/",
-    "wordCount" : "211",
+    "wordCount" : "216",
     "genre" : [ ],
     "keywords" : [ ]
 }
@@ -164,6 +164,7 @@ Les ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c.
 <h3 id="mon-conseil"><strong>Mon conseil</strong> <a href="#mon-conseil" class="hash">#</a></h3>
 <p>Personnellement, j’adore mon Kartoffelpüree liquide et sans morceaux. Cependant, les opinions en Allemagne différent considérablement ici. D’autres aiment les morceaux dans le Kartoffelpüree et ne l’aiment pas du tout quand elle est trop liquide. À vous d’essayer comment vous l’aimez le mieux  !
 De surcroît, Kartoffelpüree avec des bâtonnets de poisson est un repas pour enfants très populaire en Allemagne. Moi, j’aime toujours cette combinaison à ce jour et je ne peux que la recommander.</p>
+<p><a href="https://xlilix2312.github.io/Kartoffel/Kartoffelsalat">Aller à la recette <em>Kartoffelsalat</em></a></p>
 
       </div>
        
