--- a/print/index.html
+++ b/print/index.html
@@ -170,7 +170,7 @@
 </ol>
 <h3 id="mon-conseil"><strong>Mon conseil</strong> <a href="#mon-conseil" class="hash">#</a></h3>
 <p>Bratkartoffeln sont un plat très populaire en Allemagne et elles sont souvent servies avec le Wiener Schnitzel typique. Cependant, ma façon préférée de les manger est avec un œuf au plat. La jaune d’œuf fond sur les Bratkartoffeln, ce qui crée une combinaison extrêmement savoureuse.</p>
-<p><a href="https://xlilix2312.github.io/Kartoffel/Kartoffelauflauf/">Aller à la recette <em>Kartoffelauflauf</em></a></p>
+<p><a href="https://xlilix2312.github.io/Kartoffel/kartoffelauflauf/">Aller à la recette <em>Kartoffelauflauf</em></a></p>
 
     </div>
     </section>
@@ -187,7 +187,7 @@
 <p>Ce n’est qu’au 18ème siècle que le pharmacien <a href="https://fr.wikipedia.org/wiki/Antoine_Parmentier">Antoine-Augustin Parmentier</a> dissout cette erreur. Il commence à cultiver la pomme de terre en France et souligne l’importance d’utiliser la pomme de terre pour lutter contre les famines.</p>
 <p><strong>Fait amusant  :</strong>  Parmentier prépare un dîner pour le roi et la reine, au cours duquel seulement des plats avec des pommes de terre sont servis. À mon avis, ce dîner ressemble à un dîner que j’apprécierais beaucoup.
 Désormais, la pomme de terre devient de plus en plus importante et ne cesse de se répandre dans toute l’Europe et dans d’autres régions jusqu’à ce qu’elle conquière finalement le monde entier à la fin du 20ème siècle.</p>
-<p><a href="https://xlilix2312.github.io/Kartoffel/Vari%C3%A9t%C3%A9/">En savoir plus sur les variétés de pomme de terre</a></p>
+<p><a href="https://xlilix2312.github.io/Kartoffel/vari%C3%A9t%C3%A9/">En savoir plus sur les variétés de pomme de terre</a></p>
 
     </div>
     </section>
@@ -219,7 +219,7 @@ Désormais, la pomme de terre devient de plus en plus importante et ne cesse de 
 </ol>
 <h3 id="mon-conseil"><strong>Mon conseil</strong> <a href="#mon-conseil" class="hash">#</a></h3>
 <p>En fait, le Kartoffelauflauf est une recette que je n’ai connue que récemment, mais qui a immédiatement conquis mon estomac et mon cœur. Lorsque j’ai préparé ce plat pour la première fois pour ma famille, chaque membre de la famille a tout de suite adoré cette recette. En effet, c’est le plat préféré de ma sœur depuis. À mon avis, ce plat se marie bien avec le poisson cuit au four.</p>
-<p><a href="https://xlilix2312.github.io/Kartoffel/Kartoffelpuffer/">Aller à la recette <em>Kartoffelpuffer</em></a></p>
+<p><a href="https://xlilix2312.github.io/Kartoffel/kartoffelpuffer/">Aller à la recette <em>Kartoffelpuffer</em></a></p>
 
     </div>
     </section>
@@ -251,7 +251,7 @@ Désormais, la pomme de terre devient de plus en plus importante et ne cesse de 
 </ol>
 <h3 id="mon-conseil"><strong>Mon conseil</strong> <a href="#mon-conseil" class="hash">#</a></h3>
 <p>Kartoffelpuffer sont servies des manières différentes dans différentes régions d’Allemagne, mais aussi dans différentes parties du monde. Personnellement, je les mange avec de la compote de pommes ce qui est délicieux. J’ai de très bons souvenirs d’enfance de manger des Kartoffelpuffer avec de la compote de pommes sur la plage dans le nord de l’Allemagne. Sinon, une autre option sucrée est de manger les Kartoffelpuffer avec de la confiture. Ici, la confiture de groseilles ou de prunes est particulièrement appropriée. En revanche, une amie de Pologne les mange toujours de manière salée. Elle préfère le fromage blanc, mais d’autres variantes populaires en Pologne sont la crème fraîche, le fromage cottage ou le gruyère. Choisissez ce que vous voulez  !</p>
-<p><a href="https://xlilix2312.github.io/Kartoffel/Kartoffelp%C3%BCree/">Aller à la recette <em>Kartoffelpüree</em></a></p>
+<p><a href="https://xlilix2312.github.io/Kartoffel/kartoffelp%C3%BCree/">Aller à la recette <em>Kartoffelpüree</em></a></p>
 
     </div>
     </section>
@@ -283,7 +283,7 @@ Désormais, la pomme de terre devient de plus en plus importante et ne cesse de 
 <h3 id="mon-conseil"><strong>Mon conseil</strong> <a href="#mon-conseil" class="hash">#</a></h3>
 <p>Personnellement, j’adore mon Kartoffelpüree liquide et sans morceaux. Cependant, les opinions en Allemagne différent considérablement ici. D’autres aiment les morceaux dans le Kartoffelpüree et ne l’aiment pas du tout quand elle est trop liquide. À vous d’essayer comment vous l’aimez le mieux  !
 De surcroît, Kartoffelpüree avec des bâtonnets de poisson est un repas pour enfants très populaire en Allemagne. Moi, j’aime toujours cette combinaison à ce jour et je ne peux que la recommander.</p>
-<p><a href="https://xlilix2312.github.io/Kartoffel/Kartoffelsalat/">Aller à la recette <em>Kartoffelsalat</em></a></p>
+<p><a href="https://xlilix2312.github.io/Kartoffel/kartoffelsalat/">Aller à la recette <em>Kartoffelsalat</em></a></p>
 
     </div>
     </section>
@@ -320,7 +320,7 @@ De surcroît, Kartoffelpüree avec des bâtonnets de poisson est un repas pour e
 </ol>
 <h3 id="mon-conseil"><strong>Mon conseil</strong> <a href="#mon-conseil" class="hash">#</a></h3>
 <p>Le Kartoffelsalat est un véritable classique en Allemagne. Une fois que vous commencez à le manger, vous ne pouvez plus vous arrêter. Dans ma famille, nous en mangeons toujours à Pâques, mais traditionnellement, la plupart des familles allemandes le mangent à Noël. En effet, 19  % des Allemands mangent Kartoffelsalat à Noël et en Allemagne de l’Est, c’est même 40  %. Ensuite, le Kartoffelsalat est combiné avec des Bockwürsten [Fußnote zu Erklärung was Bockwürste sind]. Cette tradition vient du fait que Noël en Allemagne se célèbre le soir du 24 décembre alors que de nombreuses familles doivent encore travailler toute la journée du 24. Par conséquent, la combinaison de Kartoffelsalat et de Bockwürsten est très pratique. Les Bockwürste sont cuites en quelques minutes et le Kartoffelsalat peut être préparé à l’avance. En effet, je trouve que le Kartoffelsalat a encore meilleur goût lorsqu’il est laissé au réfrigérateur pendant quelques jours avant d’être consommé. Essayez vous-même si vous aimez le plat que des millions d’Allemands mangent chaque année à Noël.</p>
-<p><a href="https://xlilix2312.github.io/Kartoffel/Bratkartoffeln/">Aller à la recette <em>Bratkartoffeln</em></a></p>
+<p><a href="https://xlilix2312.github.io/Kartoffel/bratkartoffeln/">Aller à la recette <em>Bratkartoffeln</em></a></p>
 
     </div>
     </section>
