deploy: 48a4e9a862a55541d6737845094e54ba87bb3ef4

--- a/kartoffelpuffer/index.html
+++ b/kartoffelpuffer/index.html
@@ -142,7 +142,7 @@ Les ingrédients # 12 pommes de terre pelées et râpées, non cuites 2 oignons 
       <div class="post-content e-content" itemprop="articleBody">
         
       <h2 id="kartoffelpuffer-ou-les-galettes-de-pomme-de-terre"><em>Kartoffelpuffer</em> ou les galettes de pomme de terre <a href="#kartoffelpuffer-ou-les-galettes-de-pomme-de-terre" class="hash">#</a></h2>
-<p><img src="../media/Kartoffelpuffer.jpg" alt="Les galettes de pomme de terre" loading="lazy" />
+<p><img src="../images/Kartoffelpuffer.jpg" alt="Les galettes de pomme de terre" loading="lazy" />
 </p>
 <p><strong>Temps</strong>       35 minutes</p>
 <p><strong>Portions</strong>    4 portions</p>
