--- a/kartoffelsalat/index.html
+++ b/kartoffelsalat/index.html
@@ -142,7 +142,7 @@ Les ingrédients # 1.5 kg de pomme de terre 2 oignons moyens 7 cl d’huile 1 c.
       <div class="post-content e-content" itemprop="articleBody">
         
       <h2 id="kartoffelsalat-ou-la-salade-de-pomme-de-terre"><em>Kartoffelsalat</em> ou la salade de pomme de terre <a href="#kartoffelsalat-ou-la-salade-de-pomme-de-terre" class="hash">#</a></h2>
-<p><img src="../media/Kartoffelsalat.jpg" alt="La salade de pomme de terre" loading="lazy" />
+<p><img src="../images/Kartoffelsalat.jpg" alt="La salade de pomme de terre" loading="lazy" />
 </p>
 <p><strong>Temps</strong>       70 minutes</p>
 <p><strong>Portions</strong>    4 portions</p>
