--- a/print/index.html
+++ b/print/index.html
@@ -146,7 +146,7 @@
     <h3>Bratkartoffeln</h3>
     <div class="contenu">
         <h2 id="bratkartoffeln-ou-les-pommes-de-terre-sautées"><em>Bratkartoffeln</em> ou les pommes de terre sautées <a href="#bratkartoffeln-ou-les-pommes-de-terre-saut%c3%a9es" class="hash">#</a></h2>
-<p><img src="../media/Bratkartoffeln.jpg" alt="Les pommes de terre sautées au lardon" loading="lazy" />
+<p><img src="../images/Bratkartoffeln.jpg" alt="Les pommes de terre sautées au lardon" loading="lazy" />
 </p>
 <p><strong>Temps</strong>       40 minutes</p>
 <p><strong>Portions</strong>    4 portions</p>
@@ -197,7 +197,7 @@ Désormais, la pomme de terre devient de plus en plus importante et ne cesse de 
     <h3>Kartoffelauflauf</h3>
     <div class="contenu">
         <h2 id="kartoffelauflauf-ou-gratin-de-pommes-de-terre"><em>Kartoffelauflauf</em> ou gratin de pommes de terre <a href="#kartoffelauflauf-ou-gratin-de-pommes-de-terre" class="hash">#</a></h2>
-<p><img src="../media/Kartoffelauflauf.jpg" alt="Le gratin de pommes de terre" loading="lazy" />
+<p><img src="../images/Kartoffelauflauf.jpg" alt="Le gratin de pommes de terre" loading="lazy" />
 </p>
 <p><strong>Temps</strong>       75 minutes</p>
 <p><strong>Portions</strong>    4 portions</p>
@@ -229,7 +229,7 @@ Désormais, la pomme de terre devient de plus en plus importante et ne cesse de 
     <h3>Kartoffelpuffer</h3>
     <div class="contenu">
         <h2 id="kartoffelpuffer-ou-les-galettes-de-pomme-de-terre"><em>Kartoffelpuffer</em> ou les galettes de pomme de terre <a href="#kartoffelpuffer-ou-les-galettes-de-pomme-de-terre" class="hash">#</a></h2>
-<p><img src="../media/Kartoffelpuffer.jpg" alt="Les galettes de pomme de terre" loading="lazy" />
+<p><img src="../images/Kartoffelpuffer.jpg" alt="Les galettes de pomme de terre" loading="lazy" />
 </p>
 <p><strong>Temps</strong>       35 minutes</p>
 <p><strong>Portions</strong>    4 portions</p>
@@ -261,7 +261,7 @@ Désormais, la pomme de terre devient de plus en plus importante et ne cesse de 
     <h3>Kartoffelpüree</h3>
     <div class="contenu">
         <h2 id="kartoffelpüree-ou-la-purée-de-pommes-de-terre"><em>Kartoffelpüree</em> ou la purée de pommes de terre <a href="#kartoffelp%c3%bcree-ou-la-pur%c3%a9e-de-pommes-de-terre" class="hash">#</a></h2>
-<p><img src="../media/Kartoffelp%c3%bcree.jpg" alt="La purée de pommes de terre" loading="lazy" />
+<p><img src="../images/Kartoffelp%c3%bcree.jpg" alt="La purée de pommes de terre" loading="lazy" />
 </p>
 <p><strong>Temps</strong>       30 minutes</p>
 <p><strong>Portions</strong>    4 portions</p>
@@ -293,7 +293,7 @@ De surcroît, Kartoffelpüree avec des bâtonnets de poisson est un repas pour e
     <h3>Kartoffelsalat</h3>
     <div class="contenu">
         <h2 id="kartoffelsalat-ou-la-salade-de-pomme-de-terre"><em>Kartoffelsalat</em> ou la salade de pomme de terre <a href="#kartoffelsalat-ou-la-salade-de-pomme-de-terre" class="hash">#</a></h2>
-<p><img src="../media/Kartoffelsalat.jpg" alt="La salade de pomme de terre" loading="lazy" />
+<p><img src="../images/Kartoffelsalat.jpg" alt="La salade de pomme de terre" loading="lazy" />
 </p>
 <p><strong>Temps</strong>       70 minutes</p>
 <p><strong>Portions</strong>    4 portions</p>
@@ -330,19 +330,19 @@ De surcroît, Kartoffelpüree avec des bâtonnets de poisson est un repas pour e
     <h3>Variété de la pomme de terre</h3>
     <div class="contenu">
         <h2 id="quelques-variétés-de-la-kartoffel"><strong>Quelques variétés de la <em>Kartoffel</em></strong> <a href="#quelques-vari%c3%a9t%c3%a9s-de-la-kartoffel" class="hash">#</a></h2>
-<p><img src="../media/Vari%c3%a9t%c3%a9.jpg" alt="La diversité de la pomme de terre" loading="lazy" />
+<p><img src="../images/Vari%c3%a9t%c3%a9.jpg" alt="La diversité de la pomme de terre" loading="lazy" />
 </p>
 <p>Les variétés de pommes de terre les plus connues sont probablement celles de couleur jaune. Toutefois, ce sont les variétés rouges qui arrivent en premier en Europe par l’Espagne. Les variétés jaunes arrivent plus tard en Angleterre. Alors qu’en 1777 40 variétés ont été enregistrées, en 1881 il y en a déjà 630. Aujourd’hui, selon certaines estimations, il existe plusieurs milliers de variétés. En 2010, 1284 variétés sont officiellement enregistrées dans le catalogue communautaire européen.</p>
 <p><strong>La pomme de terre Jeannette</strong></p>
-<p><img src="../media/Jeannette.jpg" alt="La pomme de terre Jeannette" loading="lazy" />
+<p><img src="../images/Jeannette.jpg" alt="La pomme de terre Jeannette" loading="lazy" />
 </p>
 <p>Cette variété de pomme de terre a une peau rose, est polyvalente et convient à toutes les recettes de pommes de terre.</p>
 <p><strong>La pomme de terre blanche</strong></p>
-<p><img src="../media/Blanche.jpg" alt="La pomme de terre blanche" loading="lazy" />
+<p><img src="../images/Blanche.jpg" alt="La pomme de terre blanche" loading="lazy" />
 </p>
 <p>Cette variété de pomme de terre a une peau jaune et est particulièrement populaire auprès des jardiniers amateurs, car elle est très facile à cultiver.</p>
 <p><strong>La pomme de terre Bleu d’Artois</strong></p>
-<p><img src="../media/Bleue.jpg" alt="La pomme de terre Bleu d’Artois" loading="lazy" />
+<p><img src="../images/Bleue.jpg" alt="La pomme de terre Bleu d’Artois" loading="lazy" />
 </p>
 <p>Cette variété a une peau bleue intense, est également facile à cultiver et est particulièrement délicieuse lorsqu’elle est transformée en chips.</p>
 <p><a href="https://xlilix2312.github.io/Kartoffel/histoire/">En savoir plus sur l&rsquo;histoire de la pomme de terre</a></p>
