--- a/bratkartoffeln/index.html
+++ b/bratkartoffeln/index.html
@@ -142,7 +142,7 @@ Les ingrédients # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fu
       <div class="post-content e-content" itemprop="articleBody">
         
       <h2 id="bratkartoffeln-ou-les-pommes-de-terre-sautées"><em>Bratkartoffeln</em> ou les pommes de terre sautées <a href="#bratkartoffeln-ou-les-pommes-de-terre-saut%c3%a9es" class="hash">#</a></h2>
-<p><img src="../media/Bratkartoffeln.jpg" alt="Les pommes de terre sautées au lardon" loading="lazy" />
+<p><img src="../images/Bratkartoffeln.jpg" alt="Les pommes de terre sautées au lardon" loading="lazy" />
 </p>
 <p><strong>Temps</strong>       40 minutes</p>
 <p><strong>Portions</strong>    4 portions</p>
